compiler/kernc_cli/tests/soundness/run-pass/specialization/supertrait_upcast_preserves_const_specific_inherited_assoc_binding.rn
// exit: 0

type Base[N: usize] = trait {
    type Out;
    make: fn() Out,
};

type Derived[N: usize]: Base[N] = trait {};

type X = struct {};

impl[N: usize] *X: Derived[N] {}

impl[N: usize] *X: Base[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

impl *X: Base[4] {
    type Out = i64;

    fn make() Out {
        return 9;
    }
}

fn expect_i64(value: i64) i32 {
    return (value as i32) - 9;
}

fn main() i32 {
    let x = X.{};
    let derived = *Derived[4].{ x.& };
    let base = *Base[4, Out = i64].{ derived };
    return expect_i64(base.make());
}
